--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+    The <span class="accent">span</span> tag is generic container for.
+    </p>
 </body>
 </html>
