--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-    The <span class="accent">span</span> tag is generic container for.
-    </p>
+        <section>
+            <ul>
+                <li>
+                    <b>Strategy</b><br>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                </li>
+                <li>
+                    <b>Punctuality</b><br>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                </li>
+                <li>
+                    <b>Diligence</b><br>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                </li>
+                <li>
+                    <b>Technologies</b><br>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                </li>
+            </ul>
+        </section>
 </body>
 </html>
