--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet" />
+
+    <style>
+        .title {
+            font-family: 'Tangerine', cursive;
+        }
+    </style>
 </head>
+
 <body>
-        <section>
-            <ul>
-                <li>
-                    <b>Strategy</b><br>Our goal is to identify the business problem to walk away with the perfect and creative solution.
-                </li>
-                <li>
-                    <b>Punctuality</b><br>Bring the key message to the brand's audience for the best price within the shortest possible time.
-                </li>
-                <li>
-                    <b>Diligence</b><br>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                </li>
-                <li>
-                    <b>Technologies</b><br>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                </li>
-            </ul>
-        </section>
+    <h1 class="title">Making the Web Beautiful!</h1>
 </body>
+
 </html>
